# SingSyn

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  README.md
lib/libSinsy/: CMakeLists.txt  Sinsy.cpp  Sinsy.h
lib/libSinsy/converter/: ConfGroup.cpp  ConfGroup.h  ConfManager.cpp  ConfManager.h  Converter.cpp  Converter.h  IConf.h  IConvertable.h  PhonemeInfo.cpp  PhonemeInfo.h  UnknownConf.cpp  UnknownConf.h  util_converter.cpp  util_converter.h
lib/libSinsy/hts_engine_API/: CMakeLists.txt  HTS_audio.c  HTS_engine.c  HTS_engine.h  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c  HtsEngine.cpp  HtsEngine.h  SynthConditionImpl.cpp  SynthConditionImpl.h
lib/libSinsy/japanese/: JConf.cpp  JConf.h
lib/libSinsy/label/: ILabelOutput.h  INoteLabel.h  IPhonemeLabel.h  ISyllableLabel.h  LabelData.cpp  LabelData.h  LabelMaker.cpp  LabelMaker.h  LabelMeasure.cpp  LabelMeasure.h  LabelPosition.cpp  LabelPosition.h  LabelStream.cpp  LabelStream.h  LabelStrings.cpp  LabelStrings.h  NoteGroup.cpp  NoteGroup.h  NoteLabeler.cpp  NoteLabeler.h  PhonemeLabeler.cpp  PhonemeLabeler.h  SyllableLabeler.cpp  SyllableLabeler.h
lib/libSinsy/score/: Beat.cpp  Beat.h  Dynamics.cpp  Dynamics.h  IScoreWritable.h  IScoreWriter.h  Key.cpp  Key.h  Mode.cpp  Mode.h  Note.cpp  Note.h  Pitch.cpp  Pitch.h  ScorePosition.cpp  ScorePosition.h  Slur.cpp  Slur.h  Syllabic.cpp  Syllabic.h  util_score.cpp  util_score.h
lib/libSinsy/temporary/: ScoreDoctor.cpp  ScoreDoctor.h  TempScore.cpp  TempScore.h
lib/libSinsy/util/: Configurations.cpp  Configurations.h  Deleter.h  DiphthongConverter.cpp  DiphthongConverter.h  ForEachAdapter.h  IReadableStream.h  IStringable.cpp  IStringable.h  IWritableStream.h  InputFile.cpp  InputFile.h  MacronTable.cpp  MacronTable.h  MultibyteCharRange.cpp  MultibyteCharRange.h  OutputFile.cpp  OutputFile.h  PhonemeTable.cpp  PhonemeTable.h  StreamException.h  StringTokenizer.cpp  StringTokenizer.h  WritableStrStream.h  util_string.cpp  util_string.h  util_types.h
lib/libSinsy/xml/: XmlData.cpp  XmlData.h  XmlParser.cpp  XmlParser.h  XmlReader.cpp  XmlReader.h  XmlWriter.cpp  XmlWriter.h  xml_tags.h
test/: SAMPLE.xml  remote
